# pawbot

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  DEEP_SCAN_REPORT.md  DEPLOY.md  INSTALLATION.md  PROD_READINESS.md  README.md  SECTION_1_AGENT_PROMPTS.md  SECTION_2_MATURITY_PROMPTS.md  SECTION_3_CHANNELS_PROMPTS.md  SECTION_4_PROVIDERS_PROMPTS.md  SERVER_GUIDE.md  cert_phase1.py  cert_phase24.py  cert_phase58.py  dashboard.html  docs.html  index.html  install.html  launch.sh  pyproject.toml
.github/workflows/: ci.yml  security-checks.yml
configs/: staging.config.template.json
install/: nginx.conf  pawbot-dashboard.service  setup.sh
install/web/: index.html
mcp-servers/app_control/: server.py
mcp-servers/browser/: server.py
mcp-servers/coding/: server.py
mcp-servers/deploy/: server.py
mcp-servers/server_control/: server.py
pawbot/: __init__.py  __main__.py  contracts.py  errors.py
pawbot/agent/: __init__.py  agent_router.py  classifier.py  compactor.py  context.py  lane_queue.py  loop.py  memory.py  memory_original.py  output_sanitizer.py  planner.py  security.py  skills.py  subagent.py  telemetry.py  verification.py
pawbot/agents/: __init__.py  heartbeat.py  pool.py  workspace_manager.py
pawbot/auth/: __init__.py  device.py  keypair.py  middleware.py  roles.py  tokens.py
pawbot/browser/: __init__.py  cleanup.py  engine.py
pawbot/browser_bridge/: __init__.py  native_host.py  ws_server.py
pawbot/bus/: __init__.py  queue.py  router.py
pawbot/canvas/: __init__.py  index.html  server.py
pawbot/channels/: __init__.py  base.py  debounce.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  matrix.py  message_splitter.py  mochat.py  policy_engine.py  qq.py  reactions.py  slack.py  telegram.py  whatsapp.py
pawbot/cli/: __init__.py  _helpers.py  agent_commands.py  channel_commands.py  commands.py  completions.py  config_commands.py  cron_commands.py  dashboard_commands.py  doctor_audit.py  doctor_commands.py  ext_commands.py  fleet_commands.py  formatter.py  gateway_commands.py  memory_commands.py  observability_commands.py  onboard.py  provider_commands.py  skills_commands.py
pawbot/config/: __init__.py  backup.py  loader.py  schema.py  validation.py  validator.py
pawbot/cron/: __init__.py  scheduler.py  service.py
pawbot/dashboard/: __init__.py  auth.py  server.py  ui.html
pawbot/delivery/: __init__.py  queue.py
pawbot/extensions/: __init__.py  _compat.py  discovery.py  installer.py  lifecycle.py  loader.py  registry.py  schema.py
pawbot/fleet/: __init__.py  circuit_breaker.py  commander.py  dag.py  escalation.py  inbox.py  models.py  status.py  validator.py
pawbot/gateway/: __init__.py  server.py
pawbot/heartbeat/: __init__.py  engine.py  service.py
pawbot/identity/: __init__.py  device.py  exec_approvals.py  oauth.py  pairing.py
pawbot/observability/: __init__.py  logging.py  metrics.py  structured_logging.py
pawbot/providers/: __init__.py  base.py  context_limits.py  cost_tracker.py  custom_provider.py  factory.py  health.py  litellm_provider.py  ollama.py  openai_codex_provider.py  registry.py  resilience.py  router.py
pawbot/scripts/: __init__.py  startup.py
pawbot/session/: __init__.py  manager.py
phases/: MASTER_REFERENCE.md  PAWBOT_INSTALLATION_GUIDE.md  PHASE_01_MEMORY_SYSTEM.md  PHASE_02_AGENT_LOOP.md  PHASE_03_CONTEXT_BUILDER.md  PHASE_05_SERVER_CONTROL.md  PHASE_06_DEPLOY_PIPELINE.md  PHASE_07_CODING_ENGINE.md  PHASE_08_BROWSER_CONTROL.md  PHASE_10_CHANNELS.md  PHASE_11_HEARTBEAT_CRON.md  PHASE_12_SUBAGENTS.md  PHASE_13_SKILLS.md  PHASE_16_CLI_CONFIG.md  PROMPT_EC2_DEPLOY.md  PROMPT_FINAL_CERTIFICATION.md  PROMPT_PAWBOT_DASHBOARD.md  PROMPT_PRODUCTION_AUDIT.md  PROMPT_PRODUCTION_REMEDIATION.md
pytest_temp_report_auth/: dashboard_auth.json  dashboard_secret
pytest_temp_report_links/: facts.db
pytest_temp_report_links2/: facts.db
pytest_temp_report_memory_api/: dashboard_auth.json  dashboard_secret
pytest_temp_report_subagents/: dashboard_auth.json
pytest_temp_report_testkey/: dashboard_auth.json  dashboard_secret
pytest_temp_report_ws_auth/: dashboard_auth.json
reports/: CODEBASE_FEATURE_BUG_REPORT.md
runbooks/: RELEASE_CHECKLIST.md  ROLLBACK_RUNBOOK.md
scripts/: secret_scan.py
sessions/: cli_chat.jsonl
tests/: conftest.py  test_accessibility_tree.py  test_agent_loop.py  test_agent_router.py  test_app_control.py  test_auth.py  test_browser.py  test_browser_mcp.py  test_canvas_delivery.py  test_channel_manager.py  test_channel_manager_reliability.py  test_channel_policies.py  test_channels.py  test_chrome_extension.py  test_cli.py  test_code_checks.py  test_code_search_modes.py  test_coding_mcp.py  test_compactor.py  test_config_loader_mcp.py  test_config_validation.py  test_context.py  test_dashboard_security.py  test_dead_code_removal.py  test_deploy_mcp.py  test_devops_tooling.py  test_discord_helpers.py  test_email_helpers.py  test_extensions.py  test_feishu_helpers.py  test_fleet.py  test_fleet_integration.py  test_gateway.py  test_heartbeat_cron.py  test_hygiene.py  test_identity_oauth.py  test_install.py  test_lane_queue.py  test_lint_correctness.py  test_loop_helpers.py  (+22 more)
(+93 files in other folders)
