[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pawbot-ai"
version = "1.0.0"
description = "🐾 Pawbot — Ultra-Lightweight Personal AI Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Pawbot Team", email = "hello@thecloso.com" }]
keywords = ["ai", "assistant", "agent", "llm", "chatbot", "pawbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

dependencies = [
    # LLM providers
    "anthropic>=0.25.0",
    "openai>=1.20.0",
    "httpx>=0.27.0",
    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
    # Config validation
    "pydantic>=2.0.0",
    # Memory backends
    "redis>=5.0.0",
    "chromadb>=0.5.0",
    # Scheduling
    "croniter>=2.0.0",
    # Utilities
    "python-dotenv>=1.0.0",
    # Interactive CLI input
    "prompt_toolkit>=3.0.0",
]

[project.optional-dependencies]
desktop = [
    "pyautogui>=0.9.54",
    "pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
]
channels = [
    "faster-whisper>=1.0.0",
]
lora = [
    "axolotl>=0.4.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]
all = [
    "pawbot-ai[desktop,channels,lora,dashboard]",
]

[project.scripts]
pawbot = "pawbot.cli.commands:app"

[project.urls]
Homepage   = "https://pawbot.thecloso.com"
Repository = "https://github.com/YOUR_ORG/pawbot"
Issues     = "https://github.com/YOUR_ORG/pawbot/issues"

[tool.hatch.build.targets.wheel]
packages = ["pawbot"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
markers      = ["integration: marks tests requiring external services"]
